--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <input type="radio" id="deslocar2" name="al" style="display: none;">
     <section class="container">
         <div class="container-a">
-            
-            <label for="deslocar" id="sup">Login</label>
-            <label for="deslocar2" id="sup">Sing up</label>
+            <div class="direction">
+                <label for="deslocar" id="sup">Login</label>
+                <label for="deslocar2" id="sup">Sing up</label>
+            </div>
+           
         </div>
         <div class="container-b">
             <form action="" class="form">
