ajuste de estrutura

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <input type="radio" id="deslocar" name="al" style="display: none;">
@@ -67,25 +67,10 @@
         </div>
     </section>
 
+    <script src="./js/rotation.js"></script>
 
 
-    <script>
-        document.getElementById('loginButton').addEventListener('click', function() {
-            document.querySelector('.container').style.transform = 'rotateY(-90deg)';
-        });
 
-        document.getElementById('signupButton').addEventListener('click', function() {
-            document.querySelector('.container').style.transform = 'rotateY(-180deg)';
-        });
-
-        document.getElementById('signupLink').addEventListener('click', function() {
-            document.querySelector('.container').style.transform = 'rotateY(-180deg)';
-        });
-
-        document.getElementById('loginLink').addEventListener('click', function() {
-            document.querySelector('.container').style.transform = 'rotateY(-90deg)';
-        });
-
-    </script>
+    
 </body>
 </html>
