criando acesso ao login e validações

--- a/index.html
+++ b/index.html
@@ -19,18 +19,19 @@
         <div class="container-b">
             <form action="" class="formLogin">
                 <h1 class="title">Login</h1>
+                <div id="feedbackMessage"></div>
                 <div class="form-group">
                     <label for="email">E-mail</label>
                     <input type="email" id="emailLogin" name="email" >
-                    <div class="error" id="emailError"></div>
+                    <div class="error" id="emailErrorLogin"></div>
                 </div>
                 <div class="form-group">
                     <label for="senha">Senha</label>
                     <input type="password" id="senhaLogin" name="senha" >
-                    <div class="error" id="senhaError"></div>
+                    <div class="error" id="senhaErrorLogin"></div>
                 </div>
             </form>
-            <button type="submit">Acessar</button>
+            <button type="submit" id="btn-acessar">Acessar</button>
 
             <button id="signupLink" type="button">Cadastre-se aqui</button>
         </div>
@@ -69,6 +70,7 @@
 
     <script src="./js/rotation.js"></script>
     <script src="./js/cadastro.js"></script>
+    <script src="js/transitionI.js"></script>
 
 
 
