--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <input type="radio" id="deslocar2" name="al" style="display: none;">
     <section class="container">
         <div class="container-a">
+            <h2>create account</h2>
             <div class="direction">
                 <button id="loginButton" type="button" class="navButton">Login</button>
                 <button id="signupButton" type="button" class="navButton">Sign up</button>
@@ -32,8 +33,9 @@
                 </div>
             </form>
             <button type="submit" id="btn-acessar">Acessar</button>
+            <p>ou</p>
 
-            <button id="signupLink" type="button">Cadastre-se aqui</button>
+            <button id="signupLink" class="signupLink" type="button">Cadastre-se aqui</button>
         </div>
         <div class="container-c">
             <h1>Cadastro de Usuário</h1>
@@ -63,7 +65,7 @@
 
                 
             </form>
-            <button id="loginLink" type="button">Faça seu login</button>
+            <button id="loginLink" class="loginLink" type="button">Faça seu login</button>
             <div id="downloadLink"></div>
         </div>
     </section>
