--- a/dashboard.html
+++ b/dashboard.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/dashboard.css">
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+      integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <title>Document</title>
 </head>
 <body>
@@ -19,7 +28,86 @@
             </div>
         </div>
     </header>
-    <section class="container">
+    <section class="container-projeto">
+        <div class="content-todo">
+            <div class="header">
+                <h1>Lista de tarefas</h1>
+            </div>
+            <form action="" id="todo-form">
+                <p>Adicione suas tarefas:</p>
+                <div class="form-controle">
+                    <input type="text" id="todo-input" placeholder="o que você deseja fazer?">
+                    <button type="submit">
+                        <i class="fa-thin fa-plus"></i>
+                    </button>
+                </div>
+            </form>
+            <form action="" id="edit-form">
+                <p>Edite sua tarefa:</p>
+                <div class="form-controle">
+                    <input type="text" id="edit-input">
+                    <button type="submit">
+                        <i class="fa-solid fa-check-double"></i>
+                    </button>
+                </div>
+                <button id="cancel-edit-btn">
+                    Cancelar
+                </button>
+            </form>
+
+            <div id="tolbar">
+                <div id="search">
+                    <h4>pesquisar:</h4>
+                    <form action="">
+                        <input type="text" id="search-input" placeholder=" Buscar">
+                        <button id="erase-button">
+                                <i class="fa-solid fa-delete-left"></i>
+                        </button>
+                    </form>
+                </div>
+            </div>
+
+            <div id="filter">
+                <h4>Filtrar</h4>
+                <select id="filter-select">
+                    <option value="all">Todos</option>
+                    <option value="done">Feitos</option>
+                    <option value="todo">A fazer</option>
+                </select>
+            </div>
+
+            <div id="todo-list">
+                <div class="todo">
+                    <h3>Estou fazendo alguma coisa...</h3>
+                    <button class="finish-todo">
+                        <i class="fa-solid fa-check"></i>
+                    </button>
+
+                    <button class="edit-todo">
+                        <i class="fa-solid fa-pen"></i>
+                    </button>
+
+                    <button class="remove-todo">
+                        <i class="fa-solid fa-xmark"></i>
+                    </button>
+                </div>
+
+                <div class="todo">
+                    <h3>Estudando....</h3>
+                    <button class="finish-todo">
+                        <i class="fa-solid fa-check"></i>
+                    </button>
+
+                    <button class="edit-todo">
+                        <i class="fa-solid fa-pen"></i>
+                    </button>
+
+                    <button class="remove-todo">
+                        <i class="fa-solid fa-xmark"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
         
     </section>
 
