--- a/dashboard.html
+++ b/dashboard.html
@@ -73,7 +73,7 @@
             </div>
             <div id="todo-list">
                  
-                  Template
+                  <!-- Template
                   
                   <div class="todo">
                   <h3>Estou fazendo algo aqui...</h3>
@@ -87,7 +87,7 @@
                     <i class="fa-solid fa-xmark"></i>
                   </button>
                 </div> 
-              </div>
+              </div> -->
 
 
         </div>
