ajuste na animação

--- a/index.html
+++ b/index.html
@@ -69,10 +69,13 @@
             <div id="downloadLink"></div>
         </div>
     </section>
-
+    
+     <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="./js/script.js"></script>
     <script src="./js/rotation.js"></script>
     <script src="./js/cadastro.js"></script>
     <script src="js/transitionI.js"></script>
+   
 
 
 
