--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
         <div class="container-b">
             <form action="" class="formLogin">
                 <h1 class="title">Login</h1>
-                <div id="feedbackMessage"></div>
+                <div id="feedbackMessageLogin"></div>
                 <div class="form-group">
                     <label for="email">E-mail</label>
                     <input type="email" id="emailLogin" name="email" >
-                    <div class="error" id="emailErrorLogin"></div>
+                    <div class="errorLogin" id="emailErrorLogin"></div>
                 </div>
                 <div class="form-group">
                     <label for="senha">Senha</label>
                     <input type="password" id="senhaLogin" name="senha" >
-                    <div class="error" id="senhaErrorLogin"></div>
+                    <div class="errorLogin" id="senhaErrorLogin"></div>
                 </div>
             </form>
             <button type="submit" id="btn-acessar">Acessar</button>
@@ -66,10 +66,10 @@
                 
             </form>
             <button id="loginLink" class="loginLink" type="button">Faça seu login</button>
-            <div id="downloadLink"></div>
+            <!-- <div id="downloadLink"></div> -->
         </div>
     </section>
-    
+
      <script src="https://unpkg.com/scrollreveal"></script>
     <script src="./js/script.js"></script>
     <script src="./js/rotation.js"></script>
